syntax = "proto3"; // Протокол сериализации — protobuf, версия 3

import "common.proto";
// Подключаем общие структуры, например, Pagination

package dev.madela.apteka.medication;
// Пространство имён для микросервиса "Медикаменты"

option java_multiple_files = true;
option java_package = "dev.madela.apteka.proto.medication";
option java_outer_classname = "MedicationProto"; // Для совместимости, если multiple_files = false


// --------- Основные структуры ---------

// Действующее вещество, входящее в состав препарата
message ActiveSubstance {
  string name = 1;           // Название действующего вещества
  double concentration = 2;  // Концентрация в процентах или мг
}

// Запрос на получение списка медикаментов с фильтрацией
message MedicationRequest {
  string category = 1;                              // Фильтр по категории (например, "антибиотики")
  PriceRange price_range = 2;                       // Диапазон цен
  dev.madela.apteka.common.Pagination pagination = 3; // Пагинация (страница и размер страницы)
}

// Описание медикамента
message Medication {
  string id = 1;                          // Уникальный ID препарата
  string name = 2;                        // Название
  double price = 3;                       // Цена
  string category = 4;                    // Категория (например, "жаропонижающее")
  repeated ActiveSubstance active_substances = 5; // Перечень действующих веществ
  string pharmacy_id = 6;                // ID аптеки, в которой препарат доступен
}

// Диапазон цен, используемый в фильтрах
message PriceRange {
  double min = 1; // Минимальная цена
  double max = 2; // Максимальная цена
}

// Ответ со списком медикаментов и общим количеством
message MedicationsResponse {
  repeated Medication medications = 1; // Список найденных медикаментов
  int32 total_count = 2;               // Общее количество (для пагинации)
}

// Запрос по ID одного медикамента
message MedicationIdRequest {
  string id = 1;
}

// Запрос по списку ID медикаментов
message MedicationIdsRequest {
  repeated string ids = 1;
}

// Ответ с одним медикаментом
message MedicationResponse {
  Medication medication = 1;
}

// Запрос на удаление медикамента
message DeleteMedicationRequest {
  string id = 1;
}

// Ответ при удалении медикамента
message DeleteMedicationResponse {
  string id = 1;
  string name = 2;
}

// Запрос на удаление всех просроченных медикаментов
message DeleteExpiredMedicationsRequest {
  string expiry_date = 1; // Дата в формате YYYY-MM-DD. Удаляются все препараты, срок годности которых истёк до неё.
}

// Ответ после удаления просроченных медикаментов
message DeleteExpiredMedicationsResponse {
  int32 count = 1;                   // Количество удалённых
  repeated string deleted_ids = 2;   // Список ID удалённых медикаментов
}

// Запрос на обновление цены медикамента
message UpdateMedicationPriceRequest {
  string id = 1;
  double new_price = 2;
  double old_price = 3; // Может использоваться для проверки или журналирования
}

// Ответ после обновления цены
message UpdateMedicationPriceResponse {
  string id = 1;
  string name = 2;
  double old_price = 3;
  double new_price = 4;
  string updated_at = 5; // Дата и время обновления
}

// Запрос на получение медикаментов по аптеке
message PharmacyMedicationsRequest {
  string pharmacy_id = 1;
}

// Ответ со списком медикаментов конкретной аптеки
message PharmacyMedicationsResponse {
  repeated Medication medications = 1;
}

// Запрос на получение статистики по аптеке
message PharmacyStatisticsRequest {
  string pharmacy_id = 1;
}

// Кол-во медикаментов в конкретной категории
message CategoryStock {
  string category = 1;
  int32 count = 2;
}

// Ответ со статистикой по аптеке
message PharmacyStatisticsResponse {
  int32 total_medications = 1;               // Всего медикаментов
  double average_price = 2;                  // Средняя цена по аптеке
  repeated CategoryStock stock_by_category = 3; // Кол-во по категориям
}


// --------- gRPC-сервис ---------

service MedicationService {

  // Получить список медикаментов с фильтрацией (категория, цена, пагинация)
  rpc GetMedications (MedicationRequest) returns (MedicationsResponse);

  // Получить медикамент по его ID
  rpc GetMedicationById (MedicationIdRequest) returns (MedicationResponse);

  // Получить список медикаментов по массиву ID
  rpc GetMedicationsByIds (MedicationIdsRequest) returns (MedicationsResponse);

  // Удалить медикамент по ID
  rpc DeleteMedication (DeleteMedicationRequest) returns (DeleteMedicationResponse);

  // Удалить просроченные медикаменты (по дате)
  rpc DeleteExpiredMedications(DeleteExpiredMedicationsRequest) returns (DeleteExpiredMedicationsResponse);

  // Обновить цену медикамента
  rpc UpdateMedicationPrice (UpdateMedicationPriceRequest) returns (UpdateMedicationPriceResponse);

  // Получить все медикаменты, доступные в конкретной аптеке
  rpc GetMedicationsByPharmacy (PharmacyMedicationsRequest) returns (PharmacyMedicationsResponse);

  // Получить агрегированную статистику по аптеке (всего медикаментов, средняя цена и разбивка по категориям)
  rpc GetPharmacyStatistics (PharmacyStatisticsRequest) returns (PharmacyStatisticsResponse);
}
